--- a/Sky/Sky.vcxproj
+++ b/Sky/Sky.vcxproj
@@ -21,23 +21,33 @@
   <ItemGroup>
     <ClCompile Include="Src\GameWindow.cpp" />
     <ClCompile Include="Src\GLFWCode\GLFWImplementation.cpp" />
+    <ClCompile Include="Src\Image.cpp" />
+    <ClCompile Include="Src\OpenGLCode\OpenGLImage.cpp" />
+    <ClCompile Include="Src\OpenGLCode\OpenGLRenderer.cpp" />
     <ClCompile Include="Src\OpenGLCode\OpenGLShader.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="Src\SkyApp.cpp" />
+    <ClCompile Include="Src\WindowImplementation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Sky.h" />
     <ClInclude Include="src\GameWindow.h" />
     <ClInclude Include="Src\GLFWCode\GLFWImplementation.h" />
     <ClInclude Include="src\Image.h" />
+    <ClInclude Include="src\ImplImage.h" />
+    <ClInclude Include="src\ImplRenderer.h" />
     <ClInclude Include="src\ImplShader.h" />
+    <ClInclude Include="Src\OpenGLCode\OpenGLImage.h" />
+    <ClInclude Include="Src\OpenGLCode\OpenGLRenderer.h" />
     <ClInclude Include="Src\OpenGLCode\OpenGLShader.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\Renderer.h" />
+    <ClInclude Include="Src\RendererTypes.h" />
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="Src\SkyApp.h" />
     <ClInclude Include="Src\SkyUtility.h" />
