Final recording commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,7 @@ add_subdirectory(Sky)
 add_subdirectory(S23_Game)
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT S23_Game)
+
+file(COPY Assets DESTINATION ${PROJECT_BINARY_DIR})
+file(COPY Assets DESTINATION ${PROJECT_BINARY_DIR}/DEBUG)
+file(COPY Assets DESTINATION ${PROJECT_BINARY_DIR}/RELEASE)
