Project now runs on cmake, changed background and character images, background fits screen on launch

--- a/Sky/CMakeLists.txt
+++ b/Sky/CMakeLists.txt
@@ -29,7 +29,8 @@ set(SOURCE_FILES
 	Src/OpenGLCode/OpenGLRenderer.cpp
 	Src/Image.cpp
 	Src/OpenGLCode/OpenGLShader.cpp
-	Src/Unit.Cpp
+	Src/OpenGLCode/OpenGLImage.cpp
+	Src/Unit.cpp
 	Src/SkyEvents.cpp
 )
 
